1998-09-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* root.c (set_local_cvsroot): Move memory allocation from here...
	* server.c (serve_root): ...to here.  Fixes error handling.

	* root.c (parse_cvsroot): Don't call check_root_consistent;
	parse_cvsroot is only used for local and client.
	* root.c (set_local_cvsroot): Move check_root_consistent
	functionality from here...
	* server.c (serve_root): ...to here.  Fixes error handling.  Also
	made the error more explicit, while I am at it.
	* server.c (Pserver_Repos): Now static.
	* cvs.h: Don't declare it.
	* root.c (check_root_consistent): Removed; no longer needed.
	* sanity.sh (pserver): New test, tests for this behavior and some
	other basic pserver stuff.

	* update.c (merge_file): Use cvs_output for "already contains the
	differences" message.  Found this one when I actually observed the
	out-of-order bug in Real Life(TM).

1998-09-09  Jim Kingdon

	* find_names.c (find_dirs): Make sure to zero errno before
	going around the loop again.
	* find_names.c (find_rcs): Make sure to set save_errno.
	(thanks to Alexandre Parenteau for reporting both problems).

1998-09-09  Jim Kingdon  <kingdon@harvey.cyclic.com> and Michael Pakovic

	* edit.c (notify_do): Only free line if it is not NULL.

1998-09-07  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h: dirs_sent_to_server should not be inside
	AUTH_SERVER_SUPPORT (reported by both Richard Levitte and Murray
	Bishop, thanks).

	* lock.c, cvs.h: New variable lock_dir.
	* parseinfo.c (parse_config): New option LockDir.
	* lock.c (lock_name): New function, abstracts out lock file naming
	and also supports LockDir.
	* lock.c (lock_simple_remove, Reader_Lock, write_lock, set_lock):
	Call it (6 places, to create/remove read/write/master locks).
	(Lock_Cleanup): Refuse to reenter this function.
	* sanity.sh (lockfiles): New test, tests for this feature.

1998-09-03  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot): Expect ${TESTDIR} in output instead of